; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_script.c_db_script_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_script.c_db_script_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ddb_script = type { i32, i32 }

@ENOSPC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @db_script_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @db_script_set(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.ddb_script*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @db_script_valid(i8* %8, i8* %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %3, align 4
  br label %38

15:                                               ; preds = %2
  %16 = load i8*, i8** %4, align 8
  %17 = call %struct.ddb_script* @db_script_lookup(i8* %16)
  store %struct.ddb_script* %17, %struct.ddb_script** %6, align 8
  %18 = load %struct.ddb_script*, %struct.ddb_script** %6, align 8
  %19 = icmp eq %struct.ddb_script* %18, null
  br i1 %19, label %20, label %32

20:                                               ; preds = %15
  %21 = call %struct.ddb_script* (...) @db_script_new()
  store %struct.ddb_script* %21, %struct.ddb_script** %6, align 8
  %22 = load %struct.ddb_script*, %struct.ddb_script** %6, align 8
  %23 = icmp eq %struct.ddb_script* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i32, i32* @ENOSPC, align 4
  store i32 %25, i32* %3, align 4
  br label %38

26:                                               ; preds = %20
  %27 = load %struct.ddb_script*, %struct.ddb_script** %6, align 8
  %28 = getelementptr inbounds %struct.ddb_script, %struct.ddb_script* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load i8*, i8** %4, align 8
  %31 = call i32 @strlcpy(i32 %29, i8* %30, i32 4)
  br label %32

32:                                               ; preds = %26, %15
  %33 = load %struct.ddb_script*, %struct.ddb_script** %6, align 8
  %34 = getelementptr inbounds %struct.ddb_script, %struct.ddb_script* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @strlcpy(i32 %35, i8* %36, i32 4)
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %32, %24, %13
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @db_script_valid(i8*, i8*) #1

declare dso_local %struct.ddb_script* @db_script_lookup(i8*) #1

declare dso_local %struct.ddb_script* @db_script_new(...) #1

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
